[package]
name = "env_loader_convert"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["env-loader", "proc-macro"]
categories = ["env", "macro"]
repository = "https://github.com/lemarco/env-loader-convert.git"
description = "Macro for value conversion for env-loader crate. Syntax sugar."
[dependencies]
quote = "1.0"
[lib]
proc-macro = true
